[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "among-equals-rl-server"
version = "0.1.0"
description = "Reinforcement Learning server for Among Equals NPC behavior"
authors = [{name = "Zakhele Gamede", email = "zakhele.gamede@umbraverse.online"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "dataclasses-json>=0.5.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."